add_subdirectory(CalculusCDK)
add_subdirectory(HaddockCDK)
add_subdirectory(TintinCDK)
add_subdirectory(RTS5825Camera)
add_subdirectory(VoxelD)
add_subdirectory(Voxel14)
add_subdirectory(VoxelVader)

set(CONF_FILES "${CONF_FILES}" PARENT_SCOPE)
set(UDEV_FILES "${UDEV_FILES}" PARENT_SCOPE)
set(FW_FILES "${FW_FILES}" PARENT_SCOPE)
set(INF_FILES "${INF_FILES}" PARENT_SCOPE)
