SET(GENERATE_PYTHON_BINDINGS "TRUE" CACHE BOOL "Controls generation of Python bindings")

IF(${GENERATE_PYTHON_BINDINGS})

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

SET(CMAKE_SWIG_FLAGS "-c++")

set(SWIG_FILES
    Voxel.i
)

foreach(file in lists ${SWIG_FILES})
SET_SOURCE_FILES_PROPERTIES(${file} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${file} PROPERTIES SWIG_FLAGS "-builtin")
endforeach()

SWIG_ADD_MODULE(Voxel python ${SWIG_FILES})
SWIG_LINK_LIBRARIES(Voxel voxel ${PYTHON_LIBRARIES})

install(TARGETS ${SWIG_MODULE_Voxel_REAL_NAME}
  DESTINATION lib/python2.7
  COMPONENT python
)

install(FILES 
  ${CMAKE_CURRENT_BINARY_DIR}/Voxel.py
  DESTINATION lib/python2.7
  COMPONENT python
)
ENDIF()